# rusted-player

./: .gitignore  AGENTS.md  Cargo.toml  README.md  config.json
src/: main.rs
src/models/: config.rs
src/services/: config_service.rs  metadata_service.rs  mod.rs  player_service.rs  playlist_storage_service.rs  ui_manager.rs
