[package]
name = "rusted-player"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = { version = "0.26.1", features = ["all-widgets"] }
crossterm = "0.27.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rodio = "0.19"
walkdir = "2.5"
rand = "0.9.2"
lofty = "0.18"
levenshtein = "1.0.5"